@@ -51,6 +51,7 @@ WGX_I18N_RESOURCE_ENTRY i18n_table[] = {
     {0, L"REPEAT_ACTION",            L"Re&peat action",           NULL},
     {0, L"SKIP_REMOVABLE_MEDIA",     L"Skip removable &media",    NULL},
     {0, L"RESCAN_DRIVES",            L"&Rescan drives",           NULL},
+    {0, L"REPAIR_DRIVES",            L"Repair drives",            NULL},
     {0, L"WHEN_DONE",                L"&When done",               NULL},
     {0, L"WHEN_DONE_NONE",           L"&None",                    NULL},
     {0, L"WHEN_DONE_EXIT",           L"E&xit",                    NULL},
@@ -152,6 +153,7 @@ struct menu_item menu_items[] = {
     {IDM_REPEAT_ACTION,           L"REPEAT_ACTION",            "Shift+R"},
     {IDM_IGNORE_REMOVABLE_MEDIA,  L"SKIP_REMOVABLE_MEDIA",     "Ctrl+M"},
     {IDM_RESCAN,                  L"RESCAN_DRIVES",            "Ctrl+D"},
+    {IDM_REPAIR,                  L"REPAIR_DRIVES",            NULL},
     {IDM_WHEN_DONE_NONE,          L"WHEN_DONE_NONE",           NULL},
     {IDM_WHEN_DONE_EXIT,          L"WHEN_DONE_EXIT",           NULL},
     {IDM_WHEN_DONE_STANDBY,       L"WHEN_DONE_STANDBY",        NULL},
