@@ -365,6 +365,7 @@ Var AtLeastXP
     SetOutPath "$INSTDIR"
         Delete "$INSTDIR\ultradefrag.exe"
         File "ultradefrag.exe"
+        File "${ROOTDIR}\src\installer\repair-drives.cmd"
         
     SetOutPath "$INSTDIR\scripts"
         File "${ROOTDIR}\src\scripts\upgrade-guiopts.lua"
@@ -435,6 +436,7 @@ Var AtLeastXP
     RMDir /r "$INSTDIR\i18n"
 
     Delete "$INSTDIR\ultradefrag.exe"
+    Delete "$INSTDIR\repair-drives.cmd"
     Delete "$INSTDIR\scripts\upgrade-guiopts.lua"
     
     Push $R0
